# Vcpkg-Template

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: ProjectVcpkg.cmake
